// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeChipSet render render all zero 1`] = `
<DocumentFragment>
  <div
    class="outcome-chip-set"
  />
</DocumentFragment>
`;

exports[`OutcomeChipSet render render incomplete zero 1`] = `
<DocumentFragment>
  <div
    class="outcome-chip-set"
  >
    <mock-outcomechip
      count="3"
      outcometype="pass"
    />
    <mock-outcomechip
      count="4"
      outcometype="fail"
    />
  </div>
</DocumentFragment>
`;

exports[`OutcomeChipSet render render with all properties 1`] = `
<DocumentFragment>
  <div
    class="outcome-chip-set"
  >
    <mock-outcomechip
      count="3"
      outcometype="pass"
    />
    <mock-outcomechip
      count="2"
      outcometype="incomplete"
    />
    <mock-outcomechip
      count="4"
      outcometype="fail"
    />
  </div>
</DocumentFragment>
`;
